# web_crawler

./: README.md  gshop_sidebar_schema.json  llm_scraper.py  pyproject.toml
scrapes/: gshop_top_gaming_headsets_20250728_003630.json  gshop_top_laptops_for_software_engineering_and_ai_20250728_012331.json  gshop_top_rated_smart_phones_of_2025_20250728_010146.json
