[project]
name = "web-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.7.2",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.5",
]

[tool.uv.workspace]
members = [
    "web_crawl",
]
